corrected text-align for loading text

--- a/src-modules/org/opencms/ade/upload/client/ui/css/upload.css
+++ b/src-modules/org/opencms/ade/upload/client/ui/css/upload.css
@@ -112,6 +112,7 @@
     text-align: center;
 }
 .loadingText {
+	text-align: center;
 }
 .loadingAnimation {
 	margin-top: 20px;
